--- a/americanas/textos_site/sobre.html
+++ b/americanas/textos_site/sobre.html
@@ -6,8 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+  <div class="americanas">
   <img src="/site_americanas/img/Logo.svg.png" alt="logo americanas">  
   <link rel="stylesheet" href="/css/style.css">
+</div>
+  <div class="texto">
   <p>
     Lojas Americanas (LASA) (BM&F Bovespa: LAME3, LAME4) é uma empresa brasileira do segmento de varejo fundada em 1929 na cidade de Niterói, no Rio de Janeiro, pelo austríaco Max Landesmann e pelos norte-americanos John Lee, Glen Matson, James Marshall e Batson Borger. A empresa conta com mais de 1320 estabelecimentos de vendas em todo o Brasil. É a quarta maior empresa varejista do país, segundo ranking do Ibevar de 2015.
   </p>
@@ -23,15 +26,21 @@
   <p>
     Através do programa de expansão “Sempre Mais Brasil”, que prevê a abertura de lojas em todos os estados brasileiros até 2013, a rede pretendia se tornar a primeira empresa varejista com presença em todo o território nacional. 
   </p>
+  <div class="Historia">
   <h2>História</h2>
+</div>
   <p>
     A empresa foi fundada em 1929, pelos americanos John Lee, Glen Matson, James Marshall e Batson Borger que partiram dos Estados Unidos em direção a Buenos Aires com o objetivo de abrir uma loja no estilo Five and Ten Cents (lojas que vendiam mercadorias a 5 e 10 centavos, na moeda americana). A ideia era lançar uma loja com preços baixos, no modelo que já fazia sucesso nos Estados Unidos e na Europa no início do século. No navio em que viajavam, conheceram os brasileiros Aquino Sales e Max Landesman que os convidaram para conhecer o Rio de Janeiro. 
   </p>
+  <div class="loja">
   <img class="mi" src="/site_americanas/img/loja_1.JPG" alt="Primeira loja da Americanas">
+</div>
   <p>
     Na visita ao Rio de Janeiro, os americanos perceberam que havia muitos funcionários públicos e militares com renda estável, porém com salários modestos, e a maioria das lojas não eram destinadas a esse público. As lojas existentes, em geral, vendiam mercadorias caras e especializadas, o que obrigava uma dona de casa ir a diferentes estabelecimentos para fazer as compras. Foi assim que decidiram que o Rio de Janeiro era a cidade perfeita para lançar o sonhado empreendimento – uma loja de preços baixos para atender àquela população “esquecida” e que vendesse vários tipos de mercadorias. Eles desejavam oferecer uma maior variedade de produtos a preços mais acessíveis. 
   </p>
+  <div class="loja">
   <img src="/site_americanas/img/loja_2.JPG" alt="">
+  </div>
   <p>
     Assim, no ano de 1929, inauguraram a 1ª Lojas Americanas, em Niterói (RJ), com o slogan “Nada além de 2 mil réis”. 
   </p>
@@ -41,6 +50,7 @@
   <p>
     Em janeiro de 2007, Lojas Americanas anunciou a aquisição da BWU, empresa detentora da marca Blockbuster Inc. no Brasil e somou mais 127 lojas à sua rede. 
   </p>
+</div>
     
 </body>
 </html>
